Fixing spacing and alignment of pages
Fixed spacing and alignment of all pages for mobile responsiveness

Added a "Previous" button for Quiz.js

--- a/src/pages/CareerPathway/quiz.css
+++ b/src/pages/CareerPathway/quiz.css
@@ -32,3 +32,9 @@
     background-color: rgba(143, 138, 138, 0.6);
     cursor: no-drop;
   }
+
+@media screen and (max-width: 768px) {
+  .quiz-main .quiz-button{
+    width: 100px;
+  }
+}
